# piano-amt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notes/: data.md  progress.md
scripts/: download_maestro.py  setup_model.py  synthesize_test_wavs.py
src/piano_amt/: __init__.py  cli.py  evaluate.py  transcribe.py
src/piano_amt/model/: architecture.py  export.py
tests/: test_transcribe.py
