[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piano-amt"
version = "0.1.0"
description = "Real-time piano automatic music transcription (Audio → MIDI)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "librosa>=0.10",
    "soundfile>=0.12",
    "onnxruntime>=1.16",
    "pretty_midi>=0.2.10",
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "mir_eval>=0.7",
]
export = [
    "torch>=2.0",
    "onnx>=1.14",
]

[project.scripts]
piano-amt = "piano_amt.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/piano_amt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that require the ONNX model (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
