[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piano-amt"
version = "0.2.0"
description = "Piano automatic music transcription (Audio → MIDI)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "librosa>=0.10",
    "soundfile>=0.12",
    "onnxruntime>=1.16",
    "pretty_midi>=0.2.10",
    "scipy>=1.10",
    "mir_eval>=0.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
export = [
    "torch>=2.0",
    "onnx>=1.14",
]

[project.scripts]
piano-amt = "piano_amt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/piano_amt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that require the ONNX model (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
